# Physics-Training

./: README.MD
Kinematics/: CMakeLists.txt  README.md
Kinematics/include/: ball.h
Kinematics/src/: ball.cpp  main.cpp
